--- a/src/_includes/components/article/pagination.liquid
+++ b/src/_includes/components/article/pagination.liquid
@@ -1,6 +1,6 @@
 
  <!-- Pagination Wrapper -->
- <div class="--m-20px --p-20px bg-s-t1a3 shadow rounded-lg flex flex-col flex-wrap items-center --gap-20px ">
+ <div class="_m-20px _p-20px bg-s-t1a3 shadow rounded-lg flex flex-col flex-wrap items-center _gap-20px ">
 
 
 
