--- a/src/_includes/components/header-footer/footer.liquid
+++ b/src/_includes/components/header-footer/footer.liquid
@@ -1,9 +1,16 @@
-<footer class="p-4 mt-4 bg-s-t1a4 shadow-lg flex justify-center">
+<footer class="p-4 mt-4 bg-s-t1a4 shadow-lg flex flex-col items-center _gap-16px ">
 
-<span class="p-2 -h5 bg-s-t1a5"> 
-    &copy; <span class="js_footer"></span>
-</span>
-     
+    <div>
+        <span class="p-2 -h5 bg-s-t1a5">
+            &copy; <span class="js_footer"></span> No Copyright
+        </span>
+    </div>
+
+    <div>Check out the
+        <a class="text-b-t1l1a1 font-bold" href="https://github.com/Rasaf-Ibrahim/11ty-Netlify-CMS-Blog"   target="_blank">code</a>
+        of this website
+    </div>
+
 
 
 
