--- a/src/_includes/layout/base.liquid
+++ b/src/_includes/layout/base.liquid
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- title -->
+
+  <title>{{ title }}</title>
+  {% block head %}{% endblock %}
+
   <!-- Favicon-->
   <link rel="icon" type="image/svg" href="/assets/favicon/favicon.svg">
 
@@ -20,22 +25,8 @@
 
 
 
-  <!-- Swiper -->
-
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
-
 
   
-
-
-  <title>{{ title }}</title>
-  {% block head %}{% endblock %}
-
-
-
 </head>
 
 
@@ -88,7 +79,6 @@
       });
     }
   </script>
-
 
    
 
