--- a/src/_includes/components/article/articles.liquid
+++ b/src/_includes/components/article/articles.liquid
@@ -1,4 +1,4 @@
-<div class="-card-1-3 --pt-4px --pb-12px --px-8px space-y-4 bg-s-t1a3 shadow-lg -fade-in-right "> 
+<div class="-card-1-3 _pt-4px _pb-12px _px-8px space-y-4 bg-s-t1a3 shadow-lg -fade-in-right "> 
     
                 
     <img class="-card-img-1-3" src="{{post.data.img}}  alt="{{post.data.imgAlt}}">
