--- a/src/assets/tailwind/3_helpers/spacing/margin/ml.css
+++ b/src/assets/tailwind/3_helpers/spacing/margin/ml.css
@@ -1,6 +1,6 @@
 @layer utilities {
 
-    .--ml-4px {
+    ._ml-4px {
 
         @apply
         ml-[var(--sm-4px)]
@@ -11,7 +11,7 @@
     }
 
 
-    .--ml-8px {
+    ._ml-8px {
 
         @apply
         ml-[var(--sm-8px)]
@@ -22,7 +22,7 @@
     }
     
 
-    .--ml-12px {
+    ._ml-12px {
     
         @apply
         ml-[var(--sm-12px)]
@@ -33,7 +33,7 @@
     }
 
 
-    .--ml-16px {
+    ._ml-16px {
 
         @apply
         ml-[var(--sm-16px)]
@@ -44,7 +44,7 @@
     }
 
 
-    .--ml-20px {
+    ._ml-20px {
 
         @apply
         ml-[var(--sm-20px)]
@@ -56,7 +56,7 @@
     
 
 
-    .--ml-24px {
+    ._ml-24px {
 
         @apply
         ml-[var(--sm-24px)]
@@ -68,7 +68,7 @@
 
 
 
-    .--ml-28px {
+    ._ml-28px {
 
         @apply
         ml-[var(--sm-28px)]
@@ -79,7 +79,7 @@
     }
 
 
-    .--ml-32px {
+    ._ml-32px {
 
         @apply
         ml-[var(--sm-32px)]
@@ -90,7 +90,7 @@
     }
 
     
-    .--ml-36px {
+    ._ml-36px {
 
         @apply
         ml-[var(--sm-36px)]
@@ -102,7 +102,7 @@
 
     
 
-    .--ml-40px {
+    ._ml-40px {
 
         @apply
         ml-[var(--sm-40px)]
@@ -114,7 +114,7 @@
 
     
 
-    .--ml-44px {
+    ._ml-44px {
 
         @apply
         ml-[var(--sm-44px)]
@@ -126,7 +126,7 @@
 
     
 
-    .--ml-48px {
+    ._ml-48px {
 
         @apply
         ml-[var(--sm-48px)]
@@ -137,7 +137,7 @@
     }
 
 
-    .--ml-52px {
+    ._ml-52px {
 
         @apply
         ml-[var(--sm-52px)]
@@ -148,7 +148,7 @@
     }
 
 
-    .--ml-56px {
+    ._ml-56px {
 
         @apply
         ml-[var(--sm-56px)]
@@ -159,7 +159,7 @@
     }
     
 
-    .--ml-60px {
+    ._ml-60px {
 
         @apply
         ml-[var(--sm-60px)]
@@ -170,7 +170,7 @@
     }
 
 
-    .--ml-64px {
+    ._ml-64px {
 
         @apply
         ml-[var(--sm-64px)]
@@ -181,7 +181,7 @@
     }
 
 
-    .--ml-68px {
+    ._ml-68px {
 
         @apply
         ml-[var(--sm-68px)]
@@ -192,7 +192,7 @@
     }
 
     
-    .--ml-72px {
+    ._ml-72px {
 
         @apply
         ml-[var(--sm-72px)]
@@ -203,7 +203,7 @@
     }
 
 
-    .--ml-76px {
+    ._ml-76px {
 
         @apply
         ml-[var(--sm-76px)]
@@ -214,7 +214,7 @@
     }
 
     
-    .--ml-80px {
+    ._ml-80px {
 
         @apply
         ml-[var(--sm-80px)]
