--- a/src/assets/tailwind/3_helpers/spacing/padding/pb.css
+++ b/src/assets/tailwind/3_helpers/spacing/padding/pb.css
@@ -1,6 +1,6 @@
 @layer utilities {
 
-    .--pb-4px {
+    ._pb-4px {
 
         @apply
         pb-[var(--sm-4px)]
@@ -11,7 +11,7 @@
     }
 
 
-    .--pb-8px {
+    ._pb-8px {
 
         @apply
         pb-[var(--sm-8px)]
@@ -22,7 +22,7 @@
     }
     
 
-    .--pb-12px {
+    ._pb-12px {
     
         @apply
         pb-[var(--sm-12px)]
@@ -33,7 +33,7 @@
     }
 
 
-    .--pb-16px {
+    ._pb-16px {
 
         @apply
         pb-[var(--sm-16px)]
@@ -44,7 +44,7 @@
     }
 
 
-    .--pb-20px {
+    ._pb-20px {
 
         @apply
         pb-[var(--sm-20px)]
@@ -56,7 +56,7 @@
     
 
 
-    .--pb-24px {
+    ._pb-24px {
 
         @apply
         pb-[var(--sm-24px)]
@@ -68,7 +68,7 @@
 
 
 
-    .--pb-28px {
+    ._pb-28px {
 
         @apply
         pb-[var(--sm-28px)]
@@ -79,7 +79,7 @@
     }
 
 
-    .--pb-32px {
+    ._pb-32px {
 
         @apply
         pb-[var(--sm-32px)]
@@ -90,7 +90,7 @@
     }
 
     
-    .--pb-36px {
+    ._pb-36px {
 
         @apply
         pb-[var(--sm-36px)]
@@ -102,7 +102,7 @@
 
     
 
-    .--pb-40px {
+    ._pb-40px {
 
         @apply
         pb-[var(--sm-40px)]
@@ -114,7 +114,7 @@
 
     
 
-    .--pb-44px {
+    ._pb-44px {
 
         @apply
         pb-[var(--sm-44px)]
@@ -126,7 +126,7 @@
 
     
 
-    .--pb-48px {
+    ._pb-48px {
 
         @apply
         pb-[var(--sm-48px)]
@@ -137,7 +137,7 @@
     }
 
 
-    .--pb-52px {
+    ._pb-52px {
 
         @apply
         pb-[var(--sm-52px)]
@@ -148,7 +148,7 @@
     }
 
 
-    .--pb-56px {
+    ._pb-56px {
 
         @apply
         pb-[var(--sm-56px)]
@@ -159,7 +159,7 @@
     }
     
 
-    .--pb-60px {
+    ._pb-60px {
 
         @apply
         pb-[var(--sm-60px)]
@@ -170,7 +170,7 @@
     }
 
 
-    .--pb-64px {
+    ._pb-64px {
 
         @apply
         pb-[var(--sm-64px)]
@@ -181,7 +181,7 @@
     }
 
 
-    .--pb-68px {
+    ._pb-68px {
 
         @apply
         pb-[var(--sm-68px)]
@@ -192,7 +192,7 @@
     }
 
     
-    .--pb-72px {
+    ._pb-72px {
 
         @apply
         pb-[var(--sm-72px)]
@@ -203,7 +203,7 @@
     }
 
 
-    .--pb-76px {
+    ._pb-76px {
 
         @apply
         pb-[var(--sm-76px)]
@@ -214,7 +214,7 @@
     }
 
     
-    .--pb-80px {
+    ._pb-80px {
 
         @apply
         pb-[var(--sm-80px)]
