--- a/src/assets/tailwind/3_helpers/spacing/padding/pr.css
+++ b/src/assets/tailwind/3_helpers/spacing/padding/pr.css
@@ -1,6 +1,6 @@
 @layer utilities {
 
-    .--pr-4px {
+    ._pr-4px {
 
         @apply
         pr-[var(--sm-4px)]
@@ -11,7 +11,7 @@
     }
 
 
-    .--pr-8px {
+    ._pr-8px {
 
         @apply
         pr-[var(--sm-8px)]
@@ -22,7 +22,7 @@
     }
     
 
-    .--pr-12px {
+    ._pr-12px {
     
         @apply
         pr-[var(--sm-12px)]
@@ -33,7 +33,7 @@
     }
 
 
-    .--pr-16px {
+    ._pr-16px {
 
         @apply
         pr-[var(--sm-16px)]
@@ -44,7 +44,7 @@
     }
 
 
-    .--pr-20px {
+    ._pr-20px {
 
         @apply
         pr-[var(--sm-20px)]
@@ -56,7 +56,7 @@
     
 
 
-    .--pr-24px {
+    ._pr-24px {
 
         @apply
         pr-[var(--sm-24px)]
@@ -68,7 +68,7 @@
 
 
 
-    .--pr-28px {
+    ._pr-28px {
 
         @apply
         pr-[var(--sm-28px)]
@@ -79,7 +79,7 @@
     }
 
 
-    .--pr-32px {
+    ._pr-32px {
 
         @apply
         pr-[var(--sm-32px)]
@@ -90,7 +90,7 @@
     }
 
     
-    .--pr-36px {
+    ._pr-36px {
 
         @apply
         pr-[var(--sm-36px)]
@@ -102,7 +102,7 @@
 
     
 
-    .--pr-40px {
+    ._pr-40px {
 
         @apply
         pr-[var(--sm-40px)]
@@ -114,7 +114,7 @@
 
     
 
-    .--pr-44px {
+    ._pr-44px {
 
         @apply
         pr-[var(--sm-44px)]
@@ -126,7 +126,7 @@
 
     
 
-    .--pr-48px {
+    ._pr-48px {
 
         @apply
         pr-[var(--sm-48px)]
@@ -137,7 +137,7 @@
     }
 
 
-    .--pr-52px {
+    ._pr-52px {
 
         @apply
         pr-[var(--sm-52px)]
@@ -148,7 +148,7 @@
     }
 
 
-    .--pr-56px {
+    ._pr-56px {
 
         @apply
         pr-[var(--sm-56px)]
@@ -159,7 +159,7 @@
     }
     
 
-    .--pr-60px {
+    ._pr-60px {
 
         @apply
         pr-[var(--sm-60px)]
@@ -170,7 +170,7 @@
     }
 
 
-    .--pr-64px {
+    ._pr-64px {
 
         @apply
         pr-[var(--sm-64px)]
@@ -181,7 +181,7 @@
     }
 
 
-    .--pr-68px {
+    ._pr-68px {
 
         @apply
         pr-[var(--sm-68px)]
@@ -192,7 +192,7 @@
     }
 
     
-    .--pr-72px {
+    ._pr-72px {
 
         @apply
         pr-[var(--sm-72px)]
@@ -203,7 +203,7 @@
     }
 
 
-    .--pr-76px {
+    ._pr-76px {
 
         @apply
         pr-[var(--sm-76px)]
@@ -214,7 +214,7 @@
     }
 
     
-    .--pr-80px {
+    ._pr-80px {
 
         @apply
         pr-[var(--sm-80px)]
